css/style.css
.main-header-bg {
    position: absolute;
    top: 0%;
    left: 0%;
    width: 100vw;
    height: 100vh;
    object-fit: cover;
}

.main-header-bg::before {
    content: '';
    position: absolute;
    width: 100vw;
    height: 100vh;
    background: rgba(0, 0, 0, 0.7);
    z-index: 0;
}

header.masthead {
    height: 100vh;
}

.main-header-bg img {
    width: 100vw;
    height: 100vh;
    z-index: -1;
}

/* .intro-lead-in span {
    color: rgb(14, 154, 166);
}
#mainNav .navbar-brand {
    color: rgb(14, 154, 166);
}

.btn-xl {
    background: rgb(15, 70, 75);
    background: radial-gradient(circle, rgba(15, 70, 75, 1) 0%, rgba(10, 54, 59, 1) 62%);
    outline: none;
    border: none;
    border-radius: 6px;
} */

.intro-lead-in span {
    color: rgb(21, 78, 70);
}

#mainNav .navbar-brand {
    color: #154e46;
}

.btn-xl {
    background: rgb(21, 78, 70);
    background: radial-gradient(circle, rgba(21, 78, 70, 1) 0%, rgba(21, 61, 56, 1) 62%);
    outline: none;
    border: none;
    border-radius: 6px;
    box-shadow: 2px 2px 15px 7px rgba(0, 0, 0, 0.7);
}

.text-shadow {
    text-shadow: 1px 1px 02px black;
}

.btn-xl:hover {
    transform: scale(1.1);
}

/* .portfolio-modal {
    left: 50%;
    width: 60%;
    height: 100%;
    transform: translateX(-50%);
} */

.modal-new {
    background: #eee;
    padding: 2rem;
    position: fixed;
    top: 51.5%;
    left: 50%;
    z-index: 4;
    transform: translate(-50%, -50%);
    width: 50vw;
    /* height: 90vh; */
    box-shadow: 2px 2px 10px 10px rgba(0, 0, 0, 0.2);
    border-radius: 3px;
}

.dark-overlay {
    content: '';
    top: 0%;
    left: 0%;
    position: fixed;
    width: 100vw;
    height: 100vh;
    background: rgba(0, 0, 0, 0.8);
    z-index: 3;
}

.btn {
    cursor: pointer;
}

.btn-modal-check {
    color: white;
    margin: 0;
    padding: 0.5rem 1rem !important;
    background: rgb(21, 78, 70);
    background: radial-gradient(circle, rgba(21, 78, 70, 1) 0%, rgba(21, 61, 56, 1) 62%);
}
.btn-modal-check:focus,
.btn-modal-check:active {
    background: #154e46;
}

.modal-new img {
    width: 100%;
}

.close-modal {
    background: transparent;
    outline: none;
    border: none;
    position: absolute;
    right: 2%;
    top: 1.5%;
    font-size: 1.5rem;
    cursor: pointer;
}

.arrow {
    position: absolute;
    top: 93%;
    left: 50%;
    width: 2.5%;
    z-index: 1;
    transform: translate(-25%);
}

.arrow img {
    width: 100%;
}

.service-heading {
    line-height: 1.2rem;
    font-size: 2.2rem;
    display: inline-block;
}

.pink-underline {
    border-bottom: 10px solid #df058d;
}
.blue-underline {
    border-bottom: 10px solid #2c49d8;
}
.orange-underline {
    border-bottom: 10px solid #ff6b2b;
}

.pink {
    color: #df058d;
}

.blue {
    color: #2c49d8;
}

.orange {
    color: #ff6b2b;
}

#services {
    background: rgb(19, 19, 19);
    min-height: 90vh;
}
#services > * {
    color: white;
}

.service-card {
    padding: 1.5rem;
    border: 1px solid white;
}

/* #portfolio {
    background: #000000;
}

#portfolio > * {
    color: white;
} */
/* #portfolio {
    background: #dedee0;
} */

/* #portfolio > * {
    color: white;
} */

#my-stack {
}

#my-stack .stack {
    padding: 2rem;
    border-radius: 50%;
    /* margin: 0 1.3rem; */
}
#my-stack .stack:nth-child(2) {
    margin-left: -2rem;
    padding: 2rem;
    border-radius: 50%;
    background: #54554d;
}
#my-stack .stack:nth-child(3) {
    padding: 2rem;
    border-radius: 50%;
    background: #f08b27;
    margin-right: 0.5rem;
    margin-left: 1rem;
}
#my-stack .stack:nth-child(4) {
    padding: 2rem;
    border-radius: 50%;
    background: #27608c;
    margin-right: 1rem;
    margin-left: 0.5rem;
}
#my-stack .stack:nth-child(5) {
    padding: 2rem;
    border-radius: 50%;
    background: #99c14c;
    margin-right: -2rem;
}
#my-stack .stack img {
    width: 100%;
    height: 100%;
}

#my-stack .stack::after {
    content: '';
    position: relative;
    top: 90%;
    left: -50%;
    display: inline;
    padding: 5.3rem 0rem;
    margin: 0;
    border-right: 3px solid black;
    z-index: -1;
}

#my-stack .my-stack-paragraph {
    padding-top: 0.5rem;
}

#my-stack .stack-name {
    margin-top: 5rem;
    border-bottom-left-radius: 22px;
    border-top-left-radius: 14px;
    border-top-right-radius: 14px;
    border-bottom-right-radius: 22px;
    padding-bottom: 0.4rem;
    color: white;
}

#my-stack .stack-name:nth-child(2) {
    margin-left: -2rem;
    background: #54554d;
}
#my-stack .stack-name:nth-child(3) {
    background: #f08b27;
    margin-right: 0.5rem;
    margin-left: 1rem;
}
#my-stack .stack-name:nth-child(4) {
    background: #27608c;
    margin-right: 1rem;
    margin-left: 0.5rem;
}
#my-stack .stack-name:nth-child(5) {
    background: #99c14c;
    margin-right: -2rem;
}

.call-for-action {
    display: flex;
    justify-content: space-between;
    align-items: center;
    color: white;
    position: relative;
    background: #131313;
    margin-bottom: -215px;
    border-radius: 20px;
    padding: 3rem;
}

.call-for-action button {
    background: rgb(60, 60, 60);
    color: white;
    padding: 0.6rem 1.2rem;
}
.call-for-action button:hover {
    background: white;
    color: black;
}

#contact input,
#contact textarea {
    width: 100%;
    margin: 0;
}

#contact button {
    width: 100%;
    background: rgb(21, 78, 70);
    background: radial-gradient(circle, rgba(21, 78, 70, 1) 0%, rgba(21, 61, 56, 1) 62%);
    color: white;
}
#contact ul li a {
    background: rgb(21, 78, 70);
    background: radial-gradient(circle, rgba(21, 78, 70, 1) 0%, rgba(21, 61, 56, 1) 62%);
}

@media screen and (min-width: 781px) {
    .pc-hide {
        display: none;
    }
}
@media screen and (max-width: 780px) {
    .mobile-hide {
        display: none;
    }
    .masthead .container {
        display: flex;
        justify-content: center;
        align-items: center;
        height: 100vh;
    }
    .arrow {
        display: none;
    }
    #my-stack .middle-row {
        display: flex;
        justify-content: center;
        flex-wrap: wrap;
    }
    #my-stack .stack {
        width: 40%;
        margin: 0 0.3rem !important;
    }
    #my-stack .stack::after {
        content: '';
        display: none;
    }
    #my-stack .stack-name {
        display: none;
    }
    #portfolio {
        margin-top: 5rem;
    }
    .service-card {
        margin: 0 1rem;
    }
}

